# editpgm

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: pgm.c  pgm.h
src/: invert.c  main.c  mirrHor.c  mirrHor.h  mirror_vertical.c
src/lib/: pgm.c  pgm.h
